[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/TreatmentManager.gd" id="1_manager"]
[ext_resource type="Script" path="res://scripts/DraggableItem.gd" id="2_item"]
[ext_resource type="Texture2D" path="res://assets/bg/metro station.jpg" id="3_bg_placeholder"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drop"]
size = Vector2(300, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_item"]
size = Vector2(80, 150)

# Placeholder texture for items if not exist
[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_item"]
size = Vector2(60, 120)

[node name="Treatment" type="Node2D"]
script = ExtResource("1_manager")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("3_bg_placeholder")
expand_mode = 1
mouse_filter = 2

[node name="DropZone" type="Area2D" parent="."]
position = Vector2(640, 360)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropZone"]
shape = SubResource("RectangleShape2D_drop")

[node name="Label" type="Label" parent="DropZone"]
offset_left = -50.0
offset_top = -20.0
offset_right = 50.0
offset_bottom = 20.0
text = "Wound Area"

[node name="ItemsContainer" type="Node2D" parent="."]
position = Vector2(1100, 100)

[node name="Cream" type="Area2D" parent="ItemsContainer"]
position = Vector2(0, 50)
script = ExtResource("2_item")

[node name="Sprite2D" type="Sprite2D" parent="ItemsContainer/Cream"]
texture = SubResource("PlaceholderTexture2D_item")
modulate = Color(1, 0.8, 0.8, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemsContainer/Cream"]
shape = SubResource("RectangleShape2D_item")
debug_color = Color(0.9, 0.2, 0.2, 0.42)

[node name="Label" type="Label" parent="ItemsContainer/Cream"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
text = "Cream"

[node name="Gel" type="Area2D" parent="ItemsContainer"]
position = Vector2(0, 250)
script = ExtResource("2_item")

[node name="Sprite2D" type="Sprite2D" parent="ItemsContainer/Gel"]
texture = SubResource("PlaceholderTexture2D_item")
modulate = Color(0.8, 0.8, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemsContainer/Gel"]
shape = SubResource("RectangleShape2D_item")

[node name="Label" type="Label" parent="ItemsContainer/Gel"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
text = "Gel"

[node name="Bandage" type="Area2D" parent="ItemsContainer"]
position = Vector2(0, 450)
script = ExtResource("2_item")

[node name="Sprite2D" type="Sprite2D" parent="ItemsContainer/Bandage"]
texture = SubResource("PlaceholderTexture2D_item")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemsContainer/Bandage"]
shape = SubResource("RectangleShape2D_item")

[node name="Label" type="Label" parent="ItemsContainer/Bandage"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
text = "Bandage"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InstructionLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Apply treatment..."
horizontal_alignment = 1
